--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -4,49 +4,63 @@
     <meta charset="utf-8">
     <title>Up and Running with Bootstrap 4</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
+    <link rel="stylesheet" href="css/syles.css">
   </head>
 
   <body>
   <div class="container">
     <div class="row">
     <div class="cold-md">
-        <h1> Up and running bootstrap </h1>
+        <h1 class="tx-center"> Up and running bootstrap </h1>
     </div>
     <!-- /.cold-md -->
     </div>
     <!-- /.row -->
 
 
-      <div class="row">
-        <div class="cold-md-6">
-          <h2>the Fastest why to developed</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut ipsa labore id sequi dolor animi quia quaerat magnam deserunt veniam.</p>
-            <button> take the tour</button>
-            <button> book </button>
+      <div class="row bg-light p-md-5 p-3 rounded">
+        <div class="col-md-6">
+          <h2>the Fastest way to developed</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+               Ut ipsa labore id sequi dolor animi quia quaerat
+                magnam deserunt veniam.</p>
+            <button type="button" name="name" class="btn btn-outline-primary btn-lg">
+              take the tour
+            </button>
+            <button type="button" name="name" class="btn btn-success btn-lg"> book </button>
         </div>
         <!-- /.cold-md-6 -->
-        <div class="cold-md-6">
-          <p>Aquí va una imagen</p>
+        <div class="col-md-6 d-none d-md-block">
+          <img src="img/img1.png" alt="" width="300px">
         </div>
         <!-- /.cold-md-6 -->
 
       </div>
       <!-- /.row -->
 
-    <div class="row">
-      <div class="cold-md-4">
+    <div class="row text-center features">
+
+      <div class="col-md-4 col-sm-10 offset-sm-1 offset-md-0">
+          <i class="fas fa-briefcase"></i>
         <h3>Book today!</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi qui laboriosam voluptatem aut, nihil corrupti. A quibusdam, molestiae. Qui, quia!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Quasi qui laboriosam voluptatem aut, nihil corrupti.
+             A quibusdam, molestiae. Qui, quia!</p>
 
       </div>
       <!-- /.cold-md-4 -->
-      <cold-md-4>
+      <div class="col-md-4">
+        <i class="fas fa-random"></i>
         <h3>Go anywhy</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam architecto omnis quo accusantium eveniet rem itaque, aperiam alias quas dolorem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Laboriosam architecto omnis quo accusantium eveniet
+           rem itaque, aperiam alias quas dolorem.</p>
 
-      </cold-md-4>
+      </div>
 
-      <div class="cold-md-4">
+      <div class="col-md-4">
+        <i class="fas fa-rocket"></i>
         <h3>RocketBus&reg;</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
              Quam vero reiciendis facere sunt, natus, deleniti dolorum?
@@ -57,6 +71,66 @@
     <!-- /.row -->
 
   </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4 col-md-3 col-6">
+          <h4>Who we are</h4>
+          <p>Up and running with bootstrap</p>
+          <p><a href="">More about Us
+            <i class="fas fa-arrow-right"></i></a></p>
+        </div>
+        <div class="col-sm-2 offset-md-1 col-6">
+          <h4>Links</h4>
+          <ul class="list-unstyled">
+            <li>Home</li>
+            <li>Tickets</li>
+            <li>Stations</li>
+          </ul>
+        </div>
+        <div class="clearfix">
+
+        </div>
+        <div class="col-sm-2 col-6">
+          <h4>Stay inTouch</h4>
+          <ul class="list-unstyled">
+            <li><a href="">About
+              <i class="far fa-address-book"></i>
+            </a></li>
+            <li><a href="">Contac Us
+              <i class="fas fa-arrow-right"></i>
+            </a></li>
+            <li><a href="">Blog
+              <i class="fab fa-blogger-b"></i>
+            </a></li>
+            <li><a href="">Twitter
+              <i class="fab fa-twitter"></i>
+            </a></li>
+            <li><a href="">Facebook
+              <i class="fab fa-facebook-square"></i>
+            </a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 offset-md-1 col-sm-4 col-6">
+          <h4>Contac Us</h4>
+            <ul class="list-unstyled">
+              <li><a href="">
+                <i class="fas fa-globe"></i>Tehuacán, Pue</a></li>
+              <li><a href="">
+                <i class="fas fa-phone"></i>2381111111</a></li>
+              <li><a href="">
+                <i class="fas fa-envelope-square"></i>kirowillyaries96@gmail.com</a></li>
+            </ul>
+
+        </div>
+      </div>
+
+      <!-- /.row -->
+    </div>
+  </div>
+  <!-- /.footer -->
+
   <!-- /.container -->
   </body>
 </html>
