--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -10,13 +10,27 @@
 
   <body>
   <div class="container">
-    <div class="row">
-    <div class="cold-md">
-        <h1 class="tx-center"> Up and running bootstrap </h1>
-    </div>
-    <!-- /.cold-md -->
-    </div>
-    <!-- /.row -->
+    <nav class="navbar navbar-light bg-light fixed-top navbar-expand-md">
+
+      <a href="" class="navbar-brand">UP and running with Bootstrap</a>
+      <button type="button" id="navigation" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="" class="nav-link active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Stations</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
 
       <div class="row bg-light p-md-5 p-3 rounded">
@@ -120,17 +134,33 @@
               <li><a href="">
                 <i class="fas fa-phone"></i>2381111111</a></li>
               <li><a href="">
-                <i class="fas fa-envelope-square"></i>kirowillyaries96@gmail.com</a></li>
+                <i class="fas fa-envelope-square"></i>willyaries96@gmail.com</a></li>
             </ul>
 
         </div>
       </div>
-
       <!-- /.row -->
     </div>
+    <!-- /.container -->
   </div>
   <!-- /.footer -->
-
-  <!-- /.container -->
   </body>
+
+  <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"> </script>
+  <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script type="text/javascript" src="bower_components/hammerjs/hammer.js"> </script>
+
+  <script type="text/javascript">
+    var $body = document.body;
+    var gestures = new Hammer($body);
+    gestures.get('swipe').set({ direction: Hammer.DIRECTION_ALL });
+
+      gestures.on('swipeup', function(ev) {
+  	    console.log(ev);
+      });
+      gestures.on('swiperight', function(ev) {
+  	    console.log(ev);
+     });
+
+  </script>
 </html>
