--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>Up and Running with Bootstrap 4</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
@@ -152,14 +154,20 @@
 
   <script type="text/javascript">
     var $body = document.body;
+    var $navBar = document.getElementById('navigation');
+
     var gestures = new Hammer($body);
     gestures.get('swipe').set({ direction: Hammer.DIRECTION_ALL });
 
       gestures.on('swipeup', function(ev) {
-  	    console.log(ev);
+  	   $navBar.click();
       });
-      gestures.on('swiperight', function(ev) {
-  	    console.log(ev);
+
+      gestures.on('swipedown', function(ev) {
+             $navBar.click()
+
+                       //$navBar.classList.add('collapsing show');
+
      });
 
   </script>
